--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ line-height: 30px;
 color: #4F5665;
     }
     .container{
-        margin-left:120px;
+        margin-left:100px;
         margin-right: 10px;
     padding:0;
     
@@ -632,8 +632,8 @@ line-height: 30px;
                 </div>
             </div>
         </div>
-        <div class="container-fluid" style="background-color: #F6F6F6">
-            <div class="row" >
+        <div class="container-fluid" style="background-color: #F6F6F6;padding-top:30px;">
+            <div class="row"  >
                 <div class="col-12 center">
                     <p class="choose" >Choose Your Plan</p>
                     <p class="smalltext">Let's choose the package that is best for you and explore it happily and <br>cheerfully.</p>
