--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@ line-height: 30px;
                 font-size: 16px;
                 line-height: 30px;
                 width:90vw;
+                padding-left:30px;
     
             }
             .vpnman{
